[package]
name = "tastytrade-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
tastytrade-rs = "0.3.0"
tokio = "1.28.2"
tui = "0.19.0"
futures = "0.3.28"
futures-util = "0.3.28"
